# bazel-vue-webpack-typescript

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bazel-vue-webpack-typescript  bazel-bin  bazel-out  bazel-testlogs  index.html  moduleA.ts  moduleB.ts  package.json  tsconfig-base.json  tsconfig.json  webpack.config.js
folderA/: BUILD.bazel  moduleA.ts  tsconfig.json
folderB/: BUILD.bazel  moduleB.ts  tsconfig.json
